refactor: initial use of cmake

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,14 @@ ipch/
 *.VC.VC.opendb
 
 *.sconsign.dblite
+
+# CMake files
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
