refactor: remove SConstruct file and update README for using CMake

--- a/.gitignore
+++ b/.gitignore
@@ -34,13 +34,6 @@ ipch/
 
 *.sconsign.dblite
 
-# CMake files
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
+# CMake output
+build/
+install/
